Upgrade Gradle to 8.4 & Scala JVM to 21; clean up build scripts