@@ -11,12 +11,6 @@ dependencies {
     implementation(projects.xefGpt4all)
 }
 
-val ENABLE_PREVIEW = "--enable-preview"
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add(ENABLE_PREVIEW)
-}
 tasks.test {
     useJUnitPlatform()
-    jvmArgs(ENABLE_PREVIEW)
 }
